# tickets

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
src/: constants.py  data_analyser.py  data_analysis.py  displayer.py  ticket_request.py
