[project]
name = "tickets"
version = "0.1.0"
description = ""
authors = [
    {name = "mm",email = "meirav.malka@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "requests",
    "streamlit"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
