[project]
name = "tickets"
version = "0.1.0"
description = ""
authors = [
    {name = "mm",email = "meirav.malka@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "requests",
    "streamlit",
    "seaborn",
    "pandas",
    "plotly",
    "matplotlib",
    "pydantic",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false